z-index fix, not IE specific, fixes #823

--- a/app/assets/stylesheets/partials/_dot-tv-welcome.scss
+++ b/app/assets/stylesheets/partials/_dot-tv-welcome.scss
@@ -50,6 +50,7 @@
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: 3;
 }
 
 //root
